# Project-Hades

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Startup.cs
Hades/: Hades.sln
Hades/Hades-WebService/: Program.cs  Startup.cs
Hades/Hades-WebService/Controllers/: ValuesController.cs
Hades/Hades.API/: Hades.API.csproj
Hades/Hades.API/Data/: PlayerDataRepository.cs
Hades/Hades.API/Items/: IFurnitureDefinition.cs  IRoomItem.cs  ItemType.cs
Hades/Hades.API/Items/Data/: StuffData.cs  StuffDataFactory.cs  StuffDataType.cs
Hades/Hades.API/Items/Data/Types/: EmptyStuffData.cs  HighscoreStuffData.cs  IntArrayStuffData.cs  LegacyStuffData.cs  MapStuffData.cs  StringArrayStuffData.cs
Hades/Hades.API/Players/: IPlayer.cs  IPlayerData.cs  IPlayerModel.cs
Hades/Hades.API/Players/Data/: PlayerGender.cs
Hades/Hades.API/Players/Inventory/: IPlayerInventory.cs  IPlayerWallet.cs
Hades/Hades.API/Players/Inventory/Items/: IInventoryItem.cs
Hades/Hades.API/Players/Messenger/: IPlayerFriendship.cs  IPlayerMessenger.cs
Hades/Hades.API/Players/Settings/: IPlayerSettings.cs
Hades/Hades.API/Players/Wardrobe/: IPlayerWardrobe.cs
Hades/Hades.API/Rooms/: IRoomData.cs  Room.cs
Hades/Hades.API/Rooms/Actors/: IRoomActor.cs  IRoomActors.cs
Hades/Hades.API/Rooms/Actors/Players/: PlayerActor.cs
Hades/Hades.API/Rooms/Items/: IRoomItem.cs  IRoomItems.cs
Hades/Hades.API/Rooms/Tiles/: IRoomMap.cs  IRoomTile.cs  Position.cs
Hades/Hades.API/Services/: IService.cs
Hades/Hades.API/Services/Items/: IFurnitureDefinitionService.cs
Hades/Hades.API/Services/Navigator/: INavigatorService.cs
Hades/Hades.API/Services/Players/: IPlayerService.cs
Hades/Hades.API/Services/Rooms/: IRoomService.cs
Hades/Hades.Common/: Class1.cs
Hades/Hades.Data/: Hades.Data.csproj  Program.cs  appsettings.json
Hades/Hades.Data.Client/: Hades.Data.Client.csproj  HadesDataClient.cs  HadesDataClientProvider.cs
Hades/Hades.Data.Client/Players/: PlayersClient.cs
Hades/Hades.Data.Models/: Hades.Data.Models.csproj
Hades/Hades.Data.Models/Players/: Player.cs
Hades/Hades.Data.Models/Players/Inventory/: InventoryItem.cs  PlayerBadge.cs
Hades/Hades.Data.Models/Players/Messenger/: MessengerFriendship.cs
Hades/Hades.Data/Context/: PlayerContext.cs
Hades/Hades.Data/Controllers/: HealthController.cs
Hades/Hades.Data/Controllers/Players/: PlayerController.cs
Hades/Hades.Data/Data/: PlayerDataContext.cs
Hades/Hades.Data/Data/Models/: PlayerData.cs
Hades/Hades.Data/Repositories/: PlayerRepository.cs
Hades/Hades.Items/: Class1.cs
Hades/Hades.Peer/: Hades.Peer.csproj  Program.cs
Hades/Hades.Peer/Networking/: HadesPeerServer.cs
Hades/Hades.Peer/Networking/Channels/: ChannelInitialiser.cs
Hades/Hades.Peer/Networking/Channels/Handlers/: HadesChannelHandler.cs
cmake/: FindMySQLClient.cmake
config/: config.json  database.json  peer-1.json  room-1.json
hades/hades-common/: CMakeLists.txt
hades/hades-common/include/: test.h
hades/hades-common/include/common/: comms.h  container.h  directory.h  file.h  pool.h  test.h
hades/hades-common/include/common/comms/: comms.h  service.h  subscriber.h
hades/hades-common/include/common/ctx/: ctx.h
hades/hades-common/include/common/dispatch/: dispatch.h
hades/hades-common/include/common/log/: log.h
hades/hades-common/include/common/net/: buffer.h  server.h  serverbuilder.h  streamhandler.h
hades/hades-common/include/common/net/messages/: message.h  messagehandler.h
hades/hades-common/include/common/net/session/: session.h  sessionfactory.h
hades/hades-common/include/common/player/: directory.h  player.h
hades/hades-common/include/common/rooms/: directory.h
hades/hades-common/include/common/util/: base64.h  lock.h  time.h
hades/hades-common/src/: comms.cpp  pool.cpp  test.cpp
hades/hades-common/src/comms/: comms.cpp  service.cpp
hades/hades-common/src/dispatch/: dispatch.cpp
hades/hades-common/src/log/: log.cpp
hades/hades-common/src/net/: buffer.cpp  server.cpp  streamhandler.cpp
hades/hades-common/src/net/messages/: messagehandler.cpp
hades/hades-common/src/net/session/: session.cpp
hades/hades-common/src/player/: player.cpp
hades/hades-common/src/rooms/: directory.cpp
hades/hades-common/src/util/: base64.cpp
hades/hades-protocol/: CMakeLists.txt
hades/hades-protocol/include/protocol/: MotdNotificationComposer.h
hades/hades-protocol/include/protocol/composers/: balance.h  catalog.h  notifications.h  rooms.h  user.h
hades/hades-protocol/include/protocol/handlers/: handshake.h
hades/hades-protocol/src/handlers/: handshake.cpp
hades/hades-server/: CMakeLists.txt
hades/hades-server/include/comms/: serversubscriber.h
hades/hades-server/include/server/comms/: serversubscriber.h
hades/hades-server/include/server/services/: peer.h  room.h
hades/hades-server/src/: main.cpp
hades/hades-server/src/comms/: serversubscriber.cpp
hades/hades-server/src/services/: peer.cpp  room.cpp
hades/hades-storage/: CMakeLists.txt
hades/hades-storage/include/storage/: storagectx.h
hades/hades-storage/include/storage/models/: player.h  room.h
hades/hades-storage/include/storage/mysql/: connectionpool.h  mysqlplayers.h
hades/hades-storage/include/storage/repositories/: players.h
hades/hades-storage/src/: storagectx.cpp  test.cpp
hades/hades-storage/src/mysql/: connectionpool.cpp  mysqlplayers.cpp
hades/services/hades-service-peer/: CMakeLists.txt
